FIX: Added overflow scroll for squads

--- a/frontend/src/app/game-info/components/squad/squad.component.css
+++ b/frontend/src/app/game-info/components/squad/squad.component.css
@@ -1,3 +1,7 @@
+.squadContainer {
+  overflow-y: scroll;
+  max-height: 30vh;
+}
 #memberContainer {
   max-height: 20vh;
   overflow-y: scroll;
